dragon/y.output
   0  $accept : start $end

   1  start : program

   2  $$1 :

   3  $$2 :

   4  program : PROGRAM id $$1 '(' identifier_list ')' ';' declarations subprogram_declarations $$2 compound_statement '.'

   5  identifier_list : id
   6                  | identifier_list ',' id

   7  declarations : declarations VAR identifier_list ':' type ';'
   8               |

   9  type : standard_type
  10       | ARRAY '[' inum DOTDOT inum ']' OF standard_type

  11  standard_type : INTEGER
  12                | REAL

  13  subprogram_declarations : subprogram_declarations subprogram_declaration ';'
  14                          |

  15  $$3 :

  16  subprogram_declaration : subprogram_head declarations subprogram_declarations $$3 compound_statement
  17                         |

  18  $$4 :

  19  subprogram_head : FUNCTION id $$4 arguments ':' standard_type ';'

  20  $$5 :

  21  subprogram_head : PROCEDURE id $$5 arguments ';'

  22  arguments : '(' parameter_list ')'
  23            |

  24  parameter_list : identifier_list ':' type
  25                 | parameter_list ';' identifier_list ':' type

  26  compound_statement : BBEGIN optional_statements END

  27  optional_statements : statement_list
  28                      |

  29  statement_list : statement
  30                 | statement_list ';' statement

  31  statement : matched_statement
  32            | unmatched_statement

  33  $$6 :

  34  $$7 :

  35  matched_statement : IF expression $$6 THEN matched_statement $$7 ELSE matched_statement
  36                    | variable ASSIGNOP expression
  37                    | procedure_statement
  38                    | compound_statement

  39  $$8 :

  40  matched_statement : WHILE expression $$8 DO matched_statement

  41  $$9 :

  42  matched_statement : DO $$9 matched_statement WHILE expression

  43  $$10 :

  44  matched_statement : FOR variable ASSIGNOP expression TO expression DO $$10 matched_statement

  45  $$11 :

  46  unmatched_statement : IF expression $$11 THEN statement

  47  $$12 :

  48  $$13 :

  49  unmatched_statement : IF expression $$12 THEN matched_statement $$13 ELSE unmatched_statement

  50  variable : id
  51           | id '[' expression ']'

  52  procedure_statement : id
  53                      | id '(' expression_list ')'

  54  expression_list : expression
  55                  | expression_list ',' expression

  56  expression : simple_expression
  57             | simple_expression RELOP simple_expression

  58  simple_expression : term
  59                    | ADDOP term
  60                    | simple_expression ADDOP term

  61  term : factor
  62       | term MULOP factor

  63  factor : '(' expression ')'
  64         | id
  65         | id '[' expression ']'
  66         | id '(' expression_list ')'
  67         | inum
  68         | rnum

  69  $$14 :

  70  factor : NOT factor $$14

  71  id : ID

  72  inum : INUM

  73  rnum : RNUM

state 0
	$accept : . start $end  (0)

	PROGRAM  shift 1
	.  error

	start  goto 2
	program  goto 3


state 1
	program : PROGRAM . id $$1 '(' identifier_list ')' ';' declarations subprogram_declarations $$2 compound_statement '.'  (4)

	ID  shift 4
	.  error

	id  goto 5


state 2
	$accept : start . $end  (0)

	$end  accept


state 3
	start : program .  (1)

	.  reduce 1


state 4
	id : ID .  (71)

	.  reduce 71


state 5
	program : PROGRAM id . $$1 '(' identifier_list ')' ';' declarations subprogram_declarations $$2 compound_statement '.'  (4)
	$$1 : .  (2)

	.  reduce 2

	$$1  goto 6


state 6
	program : PROGRAM id $$1 . '(' identifier_list ')' ';' declarations subprogram_declarations $$2 compound_statement '.'  (4)

	'('  shift 7
	.  error


state 7
	program : PROGRAM id $$1 '(' . identifier_list ')' ';' declarations subprogram_declarations $$2 compound_statement '.'  (4)

	ID  shift 4
	.  error

	identifier_list  goto 8
	id  goto 9


state 8
	program : PROGRAM id $$1 '(' identifier_list . ')' ';' declarations subprogram_declarations $$2 compound_statement '.'  (4)
	identifier_list : identifier_list . ',' id  (6)

	')'  shift 10
	','  shift 11
	.  error


state 9
	identifier_list : id .  (5)

	.  reduce 5


state 10
	program : PROGRAM id $$1 '(' identifier_list ')' . ';' declarations subprogram_declarations $$2 compound_statement '.'  (4)

	';'  shift 12
	.  error


state 11
	identifier_list : identifier_list ',' . id  (6)

	ID  shift 4
	.  error

	id  goto 13


state 12
	program : PROGRAM id $$1 '(' identifier_list ')' ';' . declarations subprogram_declarations $$2 compound_statement '.'  (4)
	declarations : .  (8)

	.  reduce 8

	declarations  goto 14


state 13
	identifier_list : identifier_list ',' id .  (6)

	.  reduce 6


state 14
	program : PROGRAM id $$1 '(' identifier_list ')' ';' declarations . subprogram_declarations $$2 compound_statement '.'  (4)
	declarations : declarations . VAR identifier_list ':' type ';'  (7)
	subprogram_declarations : .  (14)

	VAR  shift 15
	BBEGIN  reduce 14
	FUNCTION  reduce 14
	PROCEDURE  reduce 14
	';'  reduce 14

	subprogram_declarations  goto 16


state 15
	declarations : declarations VAR . identifier_list ':' type ';'  (7)

	ID  shift 4
	.  error

	identifier_list  goto 17
	id  goto 9


state 16
	program : PROGRAM id $$1 '(' identifier_list ')' ';' declarations subprogram_declarations . $$2 compound_statement '.'  (4)
	subprogram_declarations : subprogram_declarations . subprogram_declaration ';'  (13)
	$$2 : .  (3)
	subprogram_declaration : .  (17)

	FUNCTION  shift 18
	PROCEDURE  shift 19
	BBEGIN  reduce 3
	';'  reduce 17

	subprogram_head  goto 20
	subprogram_declaration  goto 21
	$$2  goto 22


state 17
	identifier_list : identifier_list . ',' id  (6)
	declarations : declarations VAR identifier_list . ':' type ';'  (7)

	','  shift 11
	':'  shift 23
	.  error


state 18
	subprogram_head : FUNCTION . id $$4 arguments ':' standard_type ';'  (19)

	ID  shift 4
	.  error

	id  goto 24


state 19
	subprogram_head : PROCEDURE . id $$5 arguments ';'  (21)

	ID  shift 4
	.  error

	id  goto 25


state 20
	subprogram_declaration : subprogram_head . declarations subprogram_declarations $$3 compound_statement  (16)
	declarations : .  (8)

	.  reduce 8

	declarations  goto 26


state 21
	subprogram_declarations : subprogram_declarations subprogram_declaration . ';'  (13)

	';'  shift 27
	.  error


state 22
	program : PROGRAM id $$1 '(' identifier_list ')' ';' declarations subprogram_declarations $$2 . compound_statement '.'  (4)

	BBEGIN  shift 28
	.  error

	compound_statement  goto 29


state 23
	declarations : declarations VAR identifier_list ':' . type ';'  (7)

	ARRAY  shift 30
	INTEGER  shift 31
	REAL  shift 32
	.  error

	standard_type  goto 33
	type  goto 34


state 24
	subprogram_head : FUNCTION id . $$4 arguments ':' standard_type ';'  (19)
	$$4 : .  (18)

	.  reduce 18

	$$4  goto 35


state 25
	subprogram_head : PROCEDURE id . $$5 arguments ';'  (21)
	$$5 : .  (20)

	.  reduce 20

	$$5  goto 36


state 26
	declarations : declarations . VAR identifier_list ':' type ';'  (7)
	subprogram_declaration : subprogram_head declarations . subprogram_declarations $$3 compound_statement  (16)
	subprogram_declarations : .  (14)

	VAR  shift 15
	BBEGIN  reduce 14
	FUNCTION  reduce 14
	PROCEDURE  reduce 14
	';'  reduce 14

	subprogram_declarations  goto 37


state 27
	subprogram_declarations : subprogram_declarations subprogram_declaration ';' .  (13)

	.  reduce 13


state 28
	compound_statement : BBEGIN . optional_statements END  (26)
	optional_statements : .  (28)

	BBEGIN  shift 28
	ID  shift 4
	WHILE  shift 38
	IF  shift 39
	DO  shift 40
	FOR  shift 41
	END  reduce 28

	procedure_statement  goto 42
	variable  goto 43
	statement  goto 44
	matched_statement  goto 45
	unmatched_statement  goto 46
	statement_list  goto 47
	optional_statements  goto 48
	compound_statement  goto 49
	id  goto 50


state 29
	program : PROGRAM id $$1 '(' identifier_list ')' ';' declarations subprogram_declarations $$2 compound_statement . '.'  (4)

	'.'  shift 51
	.  error


state 30
	type : ARRAY . '[' inum DOTDOT inum ']' OF standard_type  (10)

	'['  shift 52
	.  error


state 31
	standard_type : INTEGER .  (11)

	.  reduce 11


state 32
	standard_type : REAL .  (12)

	.  reduce 12


state 33
	type : standard_type .  (9)

	.  reduce 9


state 34
	declarations : declarations VAR identifier_list ':' type . ';'  (7)

	';'  shift 53
	.  error


state 35
	subprogram_head : FUNCTION id $$4 . arguments ':' standard_type ';'  (19)
	arguments : .  (23)

	'('  shift 54
	':'  reduce 23

	arguments  goto 55


state 36
	subprogram_head : PROCEDURE id $$5 . arguments ';'  (21)
	arguments : .  (23)

	'('  shift 54
	';'  reduce 23

	arguments  goto 56


state 37
	subprogram_declarations : subprogram_declarations . subprogram_declaration ';'  (13)
	subprogram_declaration : subprogram_head declarations subprogram_declarations . $$3 compound_statement  (16)
	$$3 : .  (15)
	subprogram_declaration : .  (17)

	FUNCTION  shift 18
	PROCEDURE  shift 19
	BBEGIN  reduce 15
	';'  reduce 17

	subprogram_head  goto 20
	subprogram_declaration  goto 21
	$$3  goto 57


state 38
	matched_statement : WHILE . expression $$8 DO matched_statement  (40)

	NOT  shift 58
	ID  shift 4
	INUM  shift 59
	RNUM  shift 60
	ADDOP  shift 61
	'('  shift 62
	.  error

	factor  goto 63
	term  goto 64
	simple_expression  goto 65
	expression  goto 66
	id  goto 67
	inum  goto 68
	rnum  goto 69


state 39
	matched_statement : IF . expression $$6 THEN matched_statement $$7 ELSE matched_statement  (35)
	unmatched_statement : IF . expression $$11 THEN statement  (46)
	unmatched_statement : IF . expression $$12 THEN matched_statement $$13 ELSE unmatched_statement  (49)

	NOT  shift 58
	ID  shift 4
	INUM  shift 59
	RNUM  shift 60
	ADDOP  shift 61
	'('  shift 62
	.  error

	factor  goto 63
	term  goto 64
	simple_expression  goto 65
	expression  goto 70
	id  goto 67
	inum  goto 68
	rnum  goto 69


state 40
	matched_statement : DO . $$9 matched_statement WHILE expression  (42)
	$$9 : .  (41)

	.  reduce 41

	$$9  goto 71


state 41
	matched_statement : FOR . variable ASSIGNOP expression TO expression DO $$10 matched_statement  (44)

	ID  shift 4
	.  error

	variable  goto 72
	id  goto 73


state 42
	matched_statement : procedure_statement .  (37)

	.  reduce 37


state 43
	matched_statement : variable . ASSIGNOP expression  (36)

	ASSIGNOP  shift 74
	.  error


state 44
	statement_list : statement .  (29)

	.  reduce 29


state 45
	statement : matched_statement .  (31)

	.  reduce 31


state 46
	statement : unmatched_statement .  (32)

	.  reduce 32


state 47
	optional_statements : statement_list .  (27)
	statement_list : statement_list . ';' statement  (30)

	';'  shift 75
	END  reduce 27


state 48
	compound_statement : BBEGIN optional_statements . END  (26)

	END  shift 76
	.  error


state 49
	matched_statement : compound_statement .  (38)

	.  reduce 38


state 50
	variable : id .  (50)
	variable : id . '[' expression ']'  (51)
	procedure_statement : id .  (52)
	procedure_statement : id . '(' expression_list ')'  (53)

	'('  shift 77
	'['  shift 78
	END  reduce 52
	ASSIGNOP  reduce 50
	WHILE  reduce 52
	ELSE  reduce 52
	';'  reduce 52


state 51
	program : PROGRAM id $$1 '(' identifier_list ')' ';' declarations subprogram_declarations $$2 compound_statement '.' .  (4)

	.  reduce 4


state 52
	type : ARRAY '[' . inum DOTDOT inum ']' OF standard_type  (10)

	INUM  shift 59
	.  error

	inum  goto 79


state 53
	declarations : declarations VAR identifier_list ':' type ';' .  (7)

	.  reduce 7


state 54
	arguments : '(' . parameter_list ')'  (22)

	ID  shift 4
	.  error

	parameter_list  goto 80
	identifier_list  goto 81
	id  goto 9


state 55
	subprogram_head : FUNCTION id $$4 arguments . ':' standard_type ';'  (19)

	':'  shift 82
	.  error


state 56
	subprogram_head : PROCEDURE id $$5 arguments . ';'  (21)

	';'  shift 83
	.  error


state 57
	subprogram_declaration : subprogram_head declarations subprogram_declarations $$3 . compound_statement  (16)

	BBEGIN  shift 28
	.  error

	compound_statement  goto 84


state 58
	factor : NOT . factor $$14  (70)

	NOT  shift 58
	ID  shift 4
	INUM  shift 59
	RNUM  shift 60
	'('  shift 62
	.  error

	factor  goto 85
	id  goto 67
	inum  goto 68
	rnum  goto 69


state 59
	inum : INUM .  (72)

	.  reduce 72


state 60
	rnum : RNUM .  (73)

	.  reduce 73


state 61
	simple_expression : ADDOP . term  (59)

	NOT  shift 58
	ID  shift 4
	INUM  shift 59
	RNUM  shift 60
	'('  shift 62
	.  error

	factor  goto 63
	term  goto 86
	id  goto 67
	inum  goto 68
	rnum  goto 69


state 62
	factor : '(' . expression ')'  (63)

	NOT  shift 58
	ID  shift 4
	INUM  shift 59
	RNUM  shift 60
	ADDOP  shift 61
	'('  shift 62
	.  error

	factor  goto 63
	term  goto 64
	simple_expression  goto 65
	expression  goto 87
	id  goto 67
	inum  goto 68
	rnum  goto 69


state 63
	term : factor .  (61)

	.  reduce 61


state 64
	simple_expression : term .  (58)
	term : term . MULOP factor  (62)

	MULOP  shift 88
	END  reduce 58
	RELOP  reduce 58
	WHILE  reduce 58
	THEN  reduce 58
	ELSE  reduce 58
	DO  reduce 58
	ADDOP  reduce 58
	TO  reduce 58
	')'  reduce 58
	';'  reduce 58
	','  reduce 58
	']'  reduce 58


state 65
	expression : simple_expression .  (56)
	expression : simple_expression . RELOP simple_expression  (57)
	simple_expression : simple_expression . ADDOP term  (60)

	RELOP  shift 89
	ADDOP  shift 90
	END  reduce 56
	WHILE  reduce 56
	THEN  reduce 56
	ELSE  reduce 56
	DO  reduce 56
	TO  reduce 56
	')'  reduce 56
	';'  reduce 56
	','  reduce 56
	']'  reduce 56


state 66
	matched_statement : WHILE expression . $$8 DO matched_statement  (40)
	$$8 : .  (39)

	.  reduce 39

	$$8  goto 91


state 67
	factor : id .  (64)
	factor : id . '[' expression ']'  (65)
	factor : id . '(' expression_list ')'  (66)

	'('  shift 92
	'['  shift 93
	END  reduce 64
	RELOP  reduce 64
	MULOP  reduce 64
	WHILE  reduce 64
	THEN  reduce 64
	ELSE  reduce 64
	DO  reduce 64
	ADDOP  reduce 64
	TO  reduce 64
	')'  reduce 64
	';'  reduce 64
	','  reduce 64
	']'  reduce 64


state 68
	factor : inum .  (67)

	.  reduce 67


state 69
	factor : rnum .  (68)

	.  reduce 68


70: reduce/reduce conflict (reduce 33, reduce 45) on THEN
70: reduce/reduce conflict (reduce 33, reduce 47) on THEN
state 70
	matched_statement : IF expression . $$6 THEN matched_statement $$7 ELSE matched_statement  (35)
	unmatched_statement : IF expression . $$11 THEN statement  (46)
	unmatched_statement : IF expression . $$12 THEN matched_statement $$13 ELSE unmatched_statement  (49)
	$$6 : .  (33)
	$$11 : .  (45)
	$$12 : .  (47)

	.  reduce 33

	$$6  goto 94
	$$11  goto 95
	$$12  goto 96


state 71
	matched_statement : DO $$9 . matched_statement WHILE expression  (42)

	BBEGIN  shift 28
	ID  shift 4
	WHILE  shift 38
	IF  shift 97
	DO  shift 40
	FOR  shift 41
	.  error

	procedure_statement  goto 42
	variable  goto 43
	matched_statement  goto 98
	compound_statement  goto 49
	id  goto 50


state 72
	matched_statement : FOR variable . ASSIGNOP expression TO expression DO $$10 matched_statement  (44)

	ASSIGNOP  shift 99
	.  error


state 73
	variable : id .  (50)
	variable : id . '[' expression ']'  (51)

	'['  shift 78
	ASSIGNOP  reduce 50


state 74
	matched_statement : variable ASSIGNOP . expression  (36)

	NOT  shift 58
	ID  shift 4
	INUM  shift 59
	RNUM  shift 60
	ADDOP  shift 61
	'('  shift 62
	.  error

	factor  goto 63
	term  goto 64
	simple_expression  goto 65
	expression  goto 100
	id  goto 67
	inum  goto 68
	rnum  goto 69


state 75
	statement_list : statement_list ';' . statement  (30)

	BBEGIN  shift 28
	ID  shift 4
	WHILE  shift 38
	IF  shift 39
	DO  shift 40
	FOR  shift 41
	.  error

	procedure_statement  goto 42
	variable  goto 43
	statement  goto 101
	matched_statement  goto 45
	unmatched_statement  goto 46
	compound_statement  goto 49
	id  goto 50


state 76
	compound_statement : BBEGIN optional_statements END .  (26)

	.  reduce 26


state 77
	procedure_statement : id '(' . expression_list ')'  (53)

	NOT  shift 58
	ID  shift 4
	INUM  shift 59
	RNUM  shift 60
	ADDOP  shift 61
	'('  shift 62
	.  error

	factor  goto 63
	term  goto 64
	simple_expression  goto 65
	expression_list  goto 102
	expression  goto 103
	id  goto 67
	inum  goto 68
	rnum  goto 69


state 78
	variable : id '[' . expression ']'  (51)

	NOT  shift 58
	ID  shift 4
	INUM  shift 59
	RNUM  shift 60
	ADDOP  shift 61
	'('  shift 62
	.  error

	factor  goto 63
	term  goto 64
	simple_expression  goto 65
	expression  goto 104
	id  goto 67
	inum  goto 68
	rnum  goto 69


state 79
	type : ARRAY '[' inum . DOTDOT inum ']' OF standard_type  (10)

	DOTDOT  shift 105
	.  error


state 80
	arguments : '(' parameter_list . ')'  (22)
	parameter_list : parameter_list . ';' identifier_list ':' type  (25)

	')'  shift 106
	';'  shift 107
	.  error


state 81
	identifier_list : identifier_list . ',' id  (6)
	parameter_list : identifier_list . ':' type  (24)

	','  shift 11
	':'  shift 108
	.  error


state 82
	subprogram_head : FUNCTION id $$4 arguments ':' . standard_type ';'  (19)

	INTEGER  shift 31
	REAL  shift 32
	.  error

	standard_type  goto 109


state 83
	subprogram_head : PROCEDURE id $$5 arguments ';' .  (21)

	.  reduce 21


state 84
	subprogram_declaration : subprogram_head declarations subprogram_declarations $$3 compound_statement .  (16)

	.  reduce 16


state 85
	factor : NOT factor . $$14  (70)
	$$14 : .  (69)

	.  reduce 69

	$$14  goto 110


state 86
	simple_expression : ADDOP term .  (59)
	term : term . MULOP factor  (62)

	MULOP  shift 88
	END  reduce 59
	RELOP  reduce 59
	WHILE  reduce 59
	THEN  reduce 59
	ELSE  reduce 59
	DO  reduce 59
	ADDOP  reduce 59
	TO  reduce 59
	')'  reduce 59
	';'  reduce 59
	','  reduce 59
	']'  reduce 59


state 87
	factor : '(' expression . ')'  (63)

	')'  shift 111
	.  error


state 88
	term : term MULOP . factor  (62)

	NOT  shift 58
	ID  shift 4
	INUM  shift 59
	RNUM  shift 60
	'('  shift 62
	.  error

	factor  goto 112
	id  goto 67
	inum  goto 68
	rnum  goto 69


state 89
	expression : simple_expression RELOP . simple_expression  (57)

	NOT  shift 58
	ID  shift 4
	INUM  shift 59
	RNUM  shift 60
	ADDOP  shift 61
	'('  shift 62
	.  error

	factor  goto 63
	term  goto 64
	simple_expression  goto 113
	id  goto 67
	inum  goto 68
	rnum  goto 69


state 90
	simple_expression : simple_expression ADDOP . term  (60)

	NOT  shift 58
	ID  shift 4
	INUM  shift 59
	RNUM  shift 60
	'('  shift 62
	.  error

	factor  goto 63
	term  goto 114
	id  goto 67
	inum  goto 68
	rnum  goto 69


state 91
	matched_statement : WHILE expression $$8 . DO matched_statement  (40)

	DO  shift 115
	.  error


state 92
	factor : id '(' . expression_list ')'  (66)

	NOT  shift 58
	ID  shift 4
	INUM  shift 59
	RNUM  shift 60
	ADDOP  shift 61
	'('  shift 62
	.  error

	factor  goto 63
	term  goto 64
	simple_expression  goto 65
	expression_list  goto 116
	expression  goto 103
	id  goto 67
	inum  goto 68
	rnum  goto 69


state 93
	factor : id '[' . expression ']'  (65)

	NOT  shift 58
	ID  shift 4
	INUM  shift 59
	RNUM  shift 60
	ADDOP  shift 61
	'('  shift 62
	.  error

	factor  goto 63
	term  goto 64
	simple_expression  goto 65
	expression  goto 117
	id  goto 67
	inum  goto 68
	rnum  goto 69


state 94
	matched_statement : IF expression $$6 . THEN matched_statement $$7 ELSE matched_statement  (35)

	THEN  shift 118
	.  error


state 95
	unmatched_statement : IF expression $$11 . THEN statement  (46)

	THEN  shift 119
	.  error


state 96
	unmatched_statement : IF expression $$12 . THEN matched_statement $$13 ELSE unmatched_statement  (49)

	THEN  shift 120
	.  error


state 97
	matched_statement : IF . expression $$6 THEN matched_statement $$7 ELSE matched_statement  (35)

	NOT  shift 58
	ID  shift 4
	INUM  shift 59
	RNUM  shift 60
	ADDOP  shift 61
	'('  shift 62
	.  error

	factor  goto 63
	term  goto 64
	simple_expression  goto 65
	expression  goto 121
	id  goto 67
	inum  goto 68
	rnum  goto 69


state 98
	matched_statement : DO $$9 matched_statement . WHILE expression  (42)

	WHILE  shift 122
	.  error


state 99
	matched_statement : FOR variable ASSIGNOP . expression TO expression DO $$10 matched_statement  (44)

	NOT  shift 58
	ID  shift 4
	INUM  shift 59
	RNUM  shift 60
	ADDOP  shift 61
	'('  shift 62
	.  error

	factor  goto 63
	term  goto 64
	simple_expression  goto 65
	expression  goto 123
	id  goto 67
	inum  goto 68
	rnum  goto 69


state 100
	matched_statement : variable ASSIGNOP expression .  (36)

	.  reduce 36


state 101
	statement_list : statement_list ';' statement .  (30)

	.  reduce 30


state 102
	procedure_statement : id '(' expression_list . ')'  (53)
	expression_list : expression_list . ',' expression  (55)

	')'  shift 124
	','  shift 125
	.  error


state 103
	expression_list : expression .  (54)

	.  reduce 54


state 104
	variable : id '[' expression . ']'  (51)

	']'  shift 126
	.  error


state 105
	type : ARRAY '[' inum DOTDOT . inum ']' OF standard_type  (10)

	INUM  shift 59
	.  error

	inum  goto 127


state 106
	arguments : '(' parameter_list ')' .  (22)

	.  reduce 22


state 107
	parameter_list : parameter_list ';' . identifier_list ':' type  (25)

	ID  shift 4
	.  error

	identifier_list  goto 128
	id  goto 9


state 108
	parameter_list : identifier_list ':' . type  (24)

	ARRAY  shift 30
	INTEGER  shift 31
	REAL  shift 32
	.  error

	standard_type  goto 33
	type  goto 129


state 109
	subprogram_head : FUNCTION id $$4 arguments ':' standard_type . ';'  (19)

	';'  shift 130
	.  error


state 110
	factor : NOT factor $$14 .  (70)

	.  reduce 70


state 111
	factor : '(' expression ')' .  (63)

	.  reduce 63


state 112
	term : term MULOP factor .  (62)

	.  reduce 62


state 113
	expression : simple_expression RELOP simple_expression .  (57)
	simple_expression : simple_expression . ADDOP term  (60)

	ADDOP  shift 90
	END  reduce 57
	WHILE  reduce 57
	THEN  reduce 57
	ELSE  reduce 57
	DO  reduce 57
	TO  reduce 57
	')'  reduce 57
	';'  reduce 57
	','  reduce 57
	']'  reduce 57


state 114
	simple_expression : simple_expression ADDOP term .  (60)
	term : term . MULOP factor  (62)

	MULOP  shift 88
	END  reduce 60
	RELOP  reduce 60
	WHILE  reduce 60
	THEN  reduce 60
	ELSE  reduce 60
	DO  reduce 60
	ADDOP  reduce 60
	TO  reduce 60
	')'  reduce 60
	';'  reduce 60
	','  reduce 60
	']'  reduce 60


state 115
	matched_statement : WHILE expression $$8 DO . matched_statement  (40)

	BBEGIN  shift 28
	ID  shift 4
	WHILE  shift 38
	IF  shift 97
	DO  shift 40
	FOR  shift 41
	.  error

	procedure_statement  goto 42
	variable  goto 43
	matched_statement  goto 131
	compound_statement  goto 49
	id  goto 50


state 116
	expression_list : expression_list . ',' expression  (55)
	factor : id '(' expression_list . ')'  (66)

	')'  shift 132
	','  shift 125
	.  error


state 117
	factor : id '[' expression . ']'  (65)

	']'  shift 133
	.  error


state 118
	matched_statement : IF expression $$6 THEN . matched_statement $$7 ELSE matched_statement  (35)

	BBEGIN  shift 28
	ID  shift 4
	WHILE  shift 38
	IF  shift 97
	DO  shift 40
	FOR  shift 41
	.  error

	procedure_statement  goto 42
	variable  goto 43
	matched_statement  goto 134
	compound_statement  goto 49
	id  goto 50


state 119
	unmatched_statement : IF expression $$11 THEN . statement  (46)

	BBEGIN  shift 28
	ID  shift 4
	WHILE  shift 38
	IF  shift 39
	DO  shift 40
	FOR  shift 41
	.  error

	procedure_statement  goto 42
	variable  goto 43
	statement  goto 135
	matched_statement  goto 45
	unmatched_statement  goto 46
	compound_statement  goto 49
	id  goto 50


state 120
	unmatched_statement : IF expression $$12 THEN . matched_statement $$13 ELSE unmatched_statement  (49)

	BBEGIN  shift 28
	ID  shift 4
	WHILE  shift 38
	IF  shift 97
	DO  shift 40
	FOR  shift 41
	.  error

	procedure_statement  goto 42
	variable  goto 43
	matched_statement  goto 136
	compound_statement  goto 49
	id  goto 50


state 121
	matched_statement : IF expression . $$6 THEN matched_statement $$7 ELSE matched_statement  (35)
	$$6 : .  (33)

	.  reduce 33

	$$6  goto 94


state 122
	matched_statement : DO $$9 matched_statement WHILE . expression  (42)

	NOT  shift 58
	ID  shift 4
	INUM  shift 59
	RNUM  shift 60
	ADDOP  shift 61
	'('  shift 62
	.  error

	factor  goto 63
	term  goto 64
	simple_expression  goto 65
	expression  goto 137
	id  goto 67
	inum  goto 68
	rnum  goto 69


state 123
	matched_statement : FOR variable ASSIGNOP expression . TO expression DO $$10 matched_statement  (44)

	TO  shift 138
	.  error


state 124
	procedure_statement : id '(' expression_list ')' .  (53)

	.  reduce 53


state 125
	expression_list : expression_list ',' . expression  (55)

	NOT  shift 58
	ID  shift 4
	INUM  shift 59
	RNUM  shift 60
	ADDOP  shift 61
	'('  shift 62
	.  error

	factor  goto 63
	term  goto 64
	simple_expression  goto 65
	expression  goto 139
	id  goto 67
	inum  goto 68
	rnum  goto 69


state 126
	variable : id '[' expression ']' .  (51)

	.  reduce 51


state 127
	type : ARRAY '[' inum DOTDOT inum . ']' OF standard_type  (10)

	']'  shift 140
	.  error


state 128
	identifier_list : identifier_list . ',' id  (6)
	parameter_list : parameter_list ';' identifier_list . ':' type  (25)

	','  shift 11
	':'  shift 141
	.  error


state 129
	parameter_list : identifier_list ':' type .  (24)

	.  reduce 24


state 130
	subprogram_head : FUNCTION id $$4 arguments ':' standard_type ';' .  (19)

	.  reduce 19


state 131
	matched_statement : WHILE expression $$8 DO matched_statement .  (40)

	.  reduce 40


state 132
	factor : id '(' expression_list ')' .  (66)

	.  reduce 66


state 133
	factor : id '[' expression ']' .  (65)

	.  reduce 65


state 134
	matched_statement : IF expression $$6 THEN matched_statement . $$7 ELSE matched_statement  (35)
	$$7 : .  (34)

	.  reduce 34

	$$7  goto 142


state 135
	unmatched_statement : IF expression $$11 THEN statement .  (46)

	.  reduce 46


state 136
	unmatched_statement : IF expression $$12 THEN matched_statement . $$13 ELSE unmatched_statement  (49)
	$$13 : .  (48)

	.  reduce 48

	$$13  goto 143


state 137
	matched_statement : DO $$9 matched_statement WHILE expression .  (42)

	.  reduce 42


state 138
	matched_statement : FOR variable ASSIGNOP expression TO . expression DO $$10 matched_statement  (44)

	NOT  shift 58
	ID  shift 4
	INUM  shift 59
	RNUM  shift 60
	ADDOP  shift 61
	'('  shift 62
	.  error

	factor  goto 63
	term  goto 64
	simple_expression  goto 65
	expression  goto 144
	id  goto 67
	inum  goto 68
	rnum  goto 69


state 139
	expression_list : expression_list ',' expression .  (55)

	.  reduce 55


state 140
	type : ARRAY '[' inum DOTDOT inum ']' . OF standard_type  (10)

	OF  shift 145
	.  error


state 141
	parameter_list : parameter_list ';' identifier_list ':' . type  (25)

	ARRAY  shift 30
	INTEGER  shift 31
	REAL  shift 32
	.  error

	standard_type  goto 33
	type  goto 146


state 142
	matched_statement : IF expression $$6 THEN matched_statement $$7 . ELSE matched_statement  (35)

	ELSE  shift 147
	.  error


state 143
	unmatched_statement : IF expression $$12 THEN matched_statement $$13 . ELSE unmatched_statement  (49)

	ELSE  shift 148
	.  error


state 144
	matched_statement : FOR variable ASSIGNOP expression TO expression . DO $$10 matched_statement  (44)

	DO  shift 149
	.  error


state 145
	type : ARRAY '[' inum DOTDOT inum ']' OF . standard_type  (10)

	INTEGER  shift 31
	REAL  shift 32
	.  error

	standard_type  goto 150


state 146
	parameter_list : parameter_list ';' identifier_list ':' type .  (25)

	.  reduce 25


state 147
	matched_statement : IF expression $$6 THEN matched_statement $$7 ELSE . matched_statement  (35)

	BBEGIN  shift 28
	ID  shift 4
	WHILE  shift 38
	IF  shift 97
	DO  shift 40
	FOR  shift 41
	.  error

	procedure_statement  goto 42
	variable  goto 43
	matched_statement  goto 151
	compound_statement  goto 49
	id  goto 50


state 148
	unmatched_statement : IF expression $$12 THEN matched_statement $$13 ELSE . unmatched_statement  (49)

	IF  shift 152
	.  error

	unmatched_statement  goto 153


state 149
	matched_statement : FOR variable ASSIGNOP expression TO expression DO . $$10 matched_statement  (44)
	$$10 : .  (43)

	.  reduce 43

	$$10  goto 154


state 150
	type : ARRAY '[' inum DOTDOT inum ']' OF standard_type .  (10)

	.  reduce 10


state 151
	matched_statement : IF expression $$6 THEN matched_statement $$7 ELSE matched_statement .  (35)

	.  reduce 35


state 152
	unmatched_statement : IF . expression $$11 THEN statement  (46)
	unmatched_statement : IF . expression $$12 THEN matched_statement $$13 ELSE unmatched_statement  (49)

	NOT  shift 58
	ID  shift 4
	INUM  shift 59
	RNUM  shift 60
	ADDOP  shift 61
	'('  shift 62
	.  error

	factor  goto 63
	term  goto 64
	simple_expression  goto 65
	expression  goto 155
	id  goto 67
	inum  goto 68
	rnum  goto 69


state 153
	unmatched_statement : IF expression $$12 THEN matched_statement $$13 ELSE unmatched_statement .  (49)

	.  reduce 49


state 154
	matched_statement : FOR variable ASSIGNOP expression TO expression DO $$10 . matched_statement  (44)

	BBEGIN  shift 28
	ID  shift 4
	WHILE  shift 38
	IF  shift 97
	DO  shift 40
	FOR  shift 41
	.  error

	procedure_statement  goto 42
	variable  goto 43
	matched_statement  goto 156
	compound_statement  goto 49
	id  goto 50


155: reduce/reduce conflict (reduce 45, reduce 47) on THEN
state 155
	unmatched_statement : IF expression . $$11 THEN statement  (46)
	unmatched_statement : IF expression . $$12 THEN matched_statement $$13 ELSE unmatched_statement  (49)
	$$11 : .  (45)
	$$12 : .  (47)

	.  reduce 45

	$$11  goto 95
	$$12  goto 96


state 156
	matched_statement : FOR variable ASSIGNOP expression TO expression DO $$10 matched_statement .  (44)

	.  reduce 44


Rules never reduced:
	$$12 :  (47)


State 70 contains 2 reduce/reduce conflicts.
State 155 contains 1 reduce/reduce conflict.


55 terminals, 42 nonterminals
74 grammar rules, 157 states
